Okay solution to path file reading
- create JS file in Java project to use here
- set goals by using the (x,y) data from the paths
- incorporate distAlongPath, speed (maybe)

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 <body>
     <canvas></canvas>
     <script src="tracker.js"></script>
+    <script src="geometry.js"></script>
     <script src="canvas.js"></script>
-    <!-- 
-        https://tinyurl.com/y99qsysr
-        <script src="environment.js"></script>
-    -->
+    <script src="niceLongCurve.js"></script>
+    <script src="pathReading.js"></script>
 </body>
 </html>
