Following random curves
- random curves of just (x,y) generated from AutoSim
- randomly chooses one to follow
- tidied up some graphics, need to tidy up more

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <canvas></canvas>
     <script src="tracker.js"></script>
     <script src="geometry.js"></script>
-    <script src="niceLongCurve.js"></script>
+    <script src="curves//niceLongCurve.js"></script>
+    <script src="curves//almostS.js"></script>
+    <script src="curves//jShape_6.js"></script>
+    <script src="curves//spacedCurve12.js"></script>
+    <script src="curves//wrongL.js"></script>
+    <script src="curves//pretzel.js"></script>
     <script src="canvas.js"></script>
 </body>
 </html>
